--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -9,7 +9,7 @@
   register: magma_downloaded
 
 - name: DOCKER | build the image
-  command: docker build -t built-by-ansible:gocd-agent-pi-erlang {{ tmp_dest }}
+  command: docker build -t "built-by-ansible:gocd-agent-pi-erlang" {{ tmp_dest }}
 
 - name: DOCKER | run the site in a docker container
   docker:
