--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -12,10 +12,9 @@
   when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
-  docker:
-    name: gocd-agent
-    image: "built-by-ansible:gocd-agent-pi-erlang"
-    state: reloaded
-    publish_all_ports: yes
-    use_tls: encrypt
+  docker: name=gocd-agent
+          image="built-by-ansible:gocd-agent-pi-erlang"
+          state=reloaded
+          publish_all_ports=yes
+          use_tls=encrypt
     when: docker_downloaded.changed
