--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -9,7 +9,7 @@
 
 - name: DOCKER | build the image
   command: docker build -t "built-by-ansible:gocd-agent-pi-erlang" {{ tmp_dest }}
-  when: docker_downloaded.changed
+  #when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
   docker: name=gocd-agent
@@ -17,4 +17,4 @@
           state=reloaded
           publish_all_ports=yes
           use_tls=encrypt
-  when: docker_downloaded.changed
+  #when: docker_downloaded.changed
