--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -1,5 +1,14 @@
 # file: tasks/build_container.yml
 
+- name: install apt packages
+  apt: "name='{{ item }}' state=present"
+  with_items:
+    - git
+    - python-pip
+
+- name: install docker-py
+  pip: name=docker-py version=0.3.1
+
 - name: DOCKER | checkout projects from github
   git: repo={{ repo_url }}
        version={{ repo_version }}
@@ -12,8 +21,8 @@
   when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
-  become: yes
-  become_user: pi
+  # become: yes
+  # become_user: pi
   docker: name=gocd-agent
           image="built-by-ansible:gocd-agent-pi-erlang"
           state=reloaded
