--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -14,11 +14,11 @@
        version={{ repo_version }}
        dest={{ tmp_dest }}
        accept_hostkey=yes
-  register: docker_downloaded
+  #register: docker_downloaded
 
 - name: DOCKER | build the image
   command: docker build -t "built-by-ansible:gocd-agent-pi-erlang" {{ tmp_dest }}
-  when: docker_downloaded.changed
+  #when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
   # become: yes
