--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -2,12 +2,17 @@
 
 - name: install apt packages
   apt: "name='{{ item }}' state=present"
+  update_cache=yes
   with_items:
     - git
     - python-pip
+    - python-dev
+    - python-setuptools
 
 - name: install docker-py
-  pip: name=docker-py version=1.1.0
+  pip: name=docker-py
+       version=1.1.0
+       state=present
 
 - name: DOCKER | checkout projects from github
   git: repo={{ repo_url }}
