--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -1,8 +1,7 @@
 # file: tasks/build_container.yml
 
 - name: install apt packages
-  apt: "name='{{ item }}' state=present"
-  update_cache=yes
+  apt: name='{{ item }}' state=present update_cache=yes
   with_items:
     - git
     - python-pip
