--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -8,10 +8,19 @@
     - python-dev
     - python-setuptools
 
+- name: Install pip
+  easy_install:
+      name=pip
+
 - name: install docker-py
   pip: name=docker-py
        version=1.1.0
        state=present
+
+# - name: install requests
+#   pip: name=requests
+#        version=2.6.0
+#        state=present
 
 - name: DOCKER | checkout projects from github
   git: repo={{ repo_url }}
