--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -1,10 +1,18 @@
 # file: tasks/build_container.yml
 
+- name: remove apt packages
+  apt: name='{{ item }}' state=absent update_cache=yes
+  with_items:
+    #- git
+    - python-pip
+    # - python-dev
+    # - python-setuptools
+
 - name: install apt packages
   apt: name='{{ item }}' state=present update_cache=yes
   with_items:
     - git
-    - python-pip
+    #- python-pip
     - python-dev
     - python-setuptools
 
