--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -35,14 +35,15 @@
        version={{ repo_version }}
        dest={{ tmp_dest }}
        accept_hostkey=yes
-  #register: docker_downloaded
+  register: docker_downloaded
 
 - name: DOCKER | build the image
+  become: yes
   command: docker build -t "built-by-ansible:gocd-agent-pi-erlang" {{ tmp_dest }}
-  #when: docker_downloaded.changed
+  when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
-  # become: yes
+  become: yes
   # become_user: pi
   docker: name=gocd-agent
           image="built-by-ansible:gocd-agent-pi-erlang"
