--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -40,7 +40,7 @@
 - name: DOCKER | build the image
   become: yes
   command: docker build -t "built-by-ansible:gocd-agent-pi-erlang" {{ tmp_dest }}
-  #when: docker_downloaded.changed
+  when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
   become: yes
@@ -50,4 +50,4 @@
           state=reloaded
           publish_all_ports=yes
           use_tls=encrypt
-  #when: docker_downloaded.changed
+  when: docker_downloaded.changed
