--- a/tasks/run_container.yml
+++ b/tasks/run_container.yml
@@ -2,9 +2,8 @@
 
 - name: DOCKER | run the site in a docker container
   become: yes
-  docker_container:
-    name: gocd-agent
-    image: "built-by-ansible:gocd-agent-pi-erlang"
-    state: started
-    restart: yes
+  docker_container: name=gocd-agent
+                    image="built-by-ansible:gocd-agent-pi-erlang"
+                    state=started
+                    restart=yes
   #when: docker_downloaded.changed
