--- a/tasks/run_container.yml
+++ b/tasks/run_container.yml
@@ -1,9 +1,19 @@
 # tasks/run_container.yml
 
+# - name: DOCKER | run the site in a docker container
+#   become: yes
+#   docker_container:
+#     name:gocd-agent
+#     image:"built-by-ansible:gocd-agent-pi-erlang"
+#     state:started
+#     restart:yes
+#   #when: docker_downloaded.changed
+
 - name: DOCKER | run the site in a docker container
-  become: yes
-  docker_container: name=gocd-agent
-                    image="built-by-ansible:gocd-agent-pi-erlang"
-                    state=started
-                    restart=yes
-  #when: docker_downloaded.changed
+  become_user: pi
+  docker: name=gocd-agent
+          image="built-by-ansible:gocd-agent-pi-erlang"
+          state=reloaded
+          publish_all_ports=yes
+          use_tls=encrypt
+  when: docker_downloaded.changed
