--- a/tasks/run_container.yml
+++ b/tasks/run_container.yml
@@ -10,7 +10,8 @@
 #   #when: docker_downloaded.changed
 
 - name: DOCKER | run the site in a docker container
-  become_user: pi
+  #become_user: pi
+  become: yes
   docker: name=gocd-agent
           image="built-by-ansible:gocd-agent-pi-erlang"
           state=reloaded
