--- a/tasks/run_container.yml
+++ b/tasks/run_container.yml
@@ -14,8 +14,7 @@
   become: yes
   docker: name=gocd-agent
           image="built-by-ansible:gocd-agent-pi-erlang"
-          state=started
-          restart=yes
+          state=restarted
           publish_all_ports=yes
           use_tls=encrypt
   #when: docker_downloaded.changed
