--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,6 @@
 #repo_name: "docker-gocd-agent-pi"
-repo_url: "https://github.com/RomanShestakov/docker-gocd-agent-pi.git"
-repo_version: master
+# repo_url: "https://github.com/RomanShestakov/docker-gocd-agent-pi.git"
+# repo_version: master
+
 tmp_dest: "/tmp/docker-gocd-agent-pi"
+erlang_version: "17.5"
