--- a/tasks/build_container.yml
+++ b/tasks/build_container.yml
@@ -11,13 +11,16 @@
           src=Dockerfile-template.j2
           dest={{ tmp_dest }}/Dockerfile
           mode=0755
+  register: dockerfile
 
 - name: DOCKER | Create docker-entrypoint.sh
   action: template
           src=docker-entrypoint.sh-template.j2
           dest={{ tmp_dest }}/docker-entrypoint.sh
           mode=0755
+  register: dockerfile.changed
 
 - name: DOCKER | build the image
   become: yes
   command: docker build -t "built-by-ansible:gocd-agent-pi-erlang" {{ tmp_dest }}
+  register: dockerfile.changed
