--- a/tasks/run_container.yml
+++ b/tasks/run_container.yml
@@ -1,12 +1,22 @@
 # tasks/run_container.yml
 
-# requires ansible 2.1.0.0
 - name: DOCKER | run the site in a docker container
   become: yes
-  docker_container:
-    name: gocd-agent
-    image: "built-by-ansible:gocd-agent-pi-erlang"
-    state: started
-    restart: yes
-    #network_mode: host
-  #when: dockerfile.changed
+  #become_user: pi
+  docker: name=gocd-agent
+          image="built-by-ansible:gocd-agent-pi-erlang"
+          state=reloaded
+          publish_all_ports=yes
+          use_tls=encrypt
+  #when: docker_downloaded.changed
+
+# # requires ansible 2.1.0.0
+# - name: DOCKER | run the site in a docker container
+#   become: yes
+#   docker_container:
+#     name: gocd-agent
+#     image: "built-by-ansible:gocd-agent-pi-erlang"
+#     state: started
+#     restart: yes
+#     #network_mode: host
+#   #when: dockerfile.changed
