--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,4 +4,4 @@
 
 tmp_dest: "/tmp/docker-gocd-agent-pi"
 erlang_version: "17.5"
-erlang_repo_url: "http://erlang.org/download/otp_src_${erlang_version}.tar.gz"
+erlang_repo_url: "http://erlang.org/download/otp_src_17.5.tar.gz"
