--- a/tasks/run_container.yml
+++ b/tasks/run_container.yml
@@ -27,7 +27,7 @@
     #network_mode: host
   #when: dockerfile.changed
 
-- name: DOCKER | Create gocd-agent service
+- name: DOCKER | Create gocd agent service
      template: src=templates/gocd-agent.service-template.j2 dest=/etc/systemd/system/gocd-agent.service
 
 - name: DOCKER | run the container
