--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,3 +5,5 @@
 tmp_dest: "/tmp/docker-gocd-agent-pi"
 erlang_version: "17.5"
 erlang_repo_url: "http://erlang.org/download/otp_src_17.5.tar.gz"
+go_server_ip: "192.168.1.79"
+go_server_port: "8153"
